ヘルパーメソッド

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,9 +19,12 @@
 </p>
 
 <p>
-  <img src="<%= @item.image_url %>">
+  <!-- <img src="<%= @item.image_url %>"> -->
+  <%= image_tag @item.image_url %>
 </p>
 <br>
-<a href="/items/<%= @item.id %>/edit">編集</a>
-<a href="/items/<%= @item.id %>"data-method="delete">削除</a>
+<!-- <a href="<%= edit_item_path(@item) %>">編集</a> -->
+<%= link_to "編集", edit_item_path(@item) %>
+<!-- <a href="<%= item_path(@item) %>" data-method="delete" >削除</a> -->
+<%= link_to "削除", item_path(@item), method: :delete %>
 <a href="/items">戻る</a>
